src/objects/ints__Credit_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ints__BorrowerID__c</fullName>
        <label>Borrower ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReport__c</fullName>
        <label>Credit Report</label>
        <referenceTo>ints__Credit_Report__c</referenceTo>
        <relationshipLabel>CreditSummary</relationshipLabel>
        <relationshipName>CreditSummary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Summary</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Credit Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>